Fix spacing on index and image fit on research

--- a/public_html/arkit-research/assets/css/main.css
+++ b/public_html/arkit-research/assets/css/main.css
@@ -4367,10 +4367,10 @@ button:disabled,
 
 #banner .image img {
     height: 100%;
-    -moz-object-fit: cover;
-    -webkit-object-fit: cover;
-    -ms-object-fit: cover;
-    object-fit: cover;
+    -moz-object-fit: contain;
+    -webkit-object-fit: contain;
+    -ms-object-fit: contain;
+    object-fit: contain;
     -moz-object-position: center;
     -webkit-object-position: center;
     -ms-object-position: center;
@@ -4413,9 +4413,8 @@ button:disabled,
         -ms-flex-shrink: 0;
         flex-shrink: 0;
         margin: 0 0 4em 0;
-        height: 25em;
+        height: auto;
         max-height: 50vh;
-        min-height: 18em;
         width: 100%;
     }
 
